--- a/ZeusPCG.uplugin
+++ b/ZeusPCG.uplugin
@@ -1,20 +1,20 @@
 {
     "FileVersion" : 3,
 	
-	"FriendlyName" : "PCG Plugin",
+	"FriendlyName" : "Zeus PCG Plugin",
 	"Version" : 1,
 	"VersionName" : "1.0",
 	"CreatedBy" : "",
 	"CreatedByURL" : "",
 	"EngineVersion" : 1579795,
 	"Description" : "PCG stuff.",
-	"Category" : "Experimental",
+	"Category" : "Zeus",
 	
     "Modules" :
 	[
 		{
 			"Name" : "ZeusPCG",
-			"Type" : "Developer"
+			"Type" : "Runtime"
 		}
 	]
 }
